# my_test_app

./: .gitignore  123.py  Untitled-1.json  agent.py  alphabet.py  emit.json  emit.yaml  foxstrot.py  knowledge_base.py  log.txt  office-discount.de.py  products.json  pyproject.toml  review.fitnesskoerier.nl.py  review.nailpolishdirect.co.uk.py  review.office-discount.de.py  review.softonic.br.py  rewiew.office-discount.de.py  salontopper.nl.py  test.py  test_1_review.nailpolishdirect.co.uk.py  test_async.py  test_review.nailpolishdirect.co.uk.py  test_usb.py
2023-07/: review.office-discount.de.py
Yesky.cn/: new_Yesky.cn.py  old_Yesky.cn.py  test.py
acousticmagazine.uk/: clean_agent.py  new_acousticmagazine.uk.py
audioholics.com/: new_audioholics.com.py  old_audioholics.com.py  test.py
ausdroid.net/: new_ausdroid.net.py  test.py
bangerhead.se/: clean_agent.py  new_bangerhead.se.py  old_bangerhead.se.py  test.py
benchmark.pl/: clean_agent.py  new_benchmark.pl.py  old_benchmark.pl.py  test.py
bigscreen.se/: new_bigscreen.se.py  old_bigscreen.se.py
bjorn3d.com/: clean_agent.py  new_bjorn3d.com.py  old_bjorn3d.com.py  test.py
clubic.com/: new_clubic.com.py  old_clubic.com.py  test.py
cnet.fr/: new_cnet.fr.py  test.py
computertotaal.nl/: new_computertotaal.nl.py  old_computertotaal.nl.py  test.py
cowcotland.com/: new_cowcotland.com.py  test.py
create_agent/: agent.py  agent_info.py  clean_agent.txt  main.py  temp.py  test_template.txt  upload_code.txt
datormagazin.se/: new_datormagazin.se.py  test.py  новий 1.txt
ddworld.cz/: new_ddworld.cz.py  (+2 more)
(+3041 files in other folders)
