[tool.poetry]
name = "my-test-app"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
readme = "README.md"
packages = [{include = "my_test_app"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
usb = "^0.0.83.dev0"
pyusb = "^1.2.1"
libusb = "^1.0.26b5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
